--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Flask-JSON Changelog
 ====================
 
+0.1
+---
+
+This release is not fully backwards compatible with the 0.0.1 version.
+
+
 0.0.1
 -----
 
