--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Flask-JSON Changelog
 ====================
 
+0.3.5
+-----
+
+* Improve empty data processing ([#9](https://github.com/skozlovf/flask-json/issues/9)).
+
 0.3.4
 -----
 
